src/test/deca/context/invalid/created/test-a-7.deca
class A{
    boolean  y =15;
}